<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_list"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/comment"
            android:icon="@drawable/ic_comment"
            android:title="@string/menu_comment" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>
